# praktika

./: CMakeLists.txt  camera.hpp  main.cpp  shader.hpp
include/glad/: glad.c  glad.h
